--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,20 @@
     <groupId>krasnolob</groupId>
     <artifactId>cleaners</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
 
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>1.1.3</version>
+    </dependency>
+
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <version>1.7.12</version>
+    </dependency>
+
+    </dependencies>
 
 </project>
