--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,13 @@
     <groupId>krasnolob</groupId>
     <artifactId>cleaners</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>4.1.6.RELEASE</version>
+        </dependency>
 
     <dependency>
         <groupId>ch.qos.logback</groupId>
@@ -22,5 +28,18 @@
     </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
